# next-graphql-app

./: .gitignore  README.md  codegen.yml  package-lock.json  package.json
app/api/graphql/: route.ts
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/database/: config.py
backend/app/models/: models.py
backend/app/schemas/: schema.py
backend/migrations/: env.py
backend/migrations/versions/: 667172d9ba3a_initial.py
docker/: docker-compose.yml
graphql/: builder.ts  schema.ts
lib/: prisma.ts
pages/: _app.tsx  categories.tsx  create.tsx  index.tsx
prisma/: schema.prisma
prisma/migrations/20250418215740_/: migration.sql
src/graphql/: generated.ts
src/graphql/mutations/: posts.ts
src/graphql/queries/: posts.ts
